--- a/class_emp.ipynb
+++ b/class_emp.ipynb
@@ -300,6 +300,420 @@
     "print(f\"employee name {emp4.name} user_id = {emp4.id}\")\n",
     "emp4.calculate_salary()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e912da81",
+   "metadata": {},
+   "source": [
+    "# Inheritance "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91776096",
+   "metadata": {},
+   "source": [
+    "### Method Overridding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fea62c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From the ^^^^ Child ^^^^ \n"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Parent\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the **** Parent ****\")\n",
+    "\n",
+    "class child(parent):\n",
+    "    def print_call(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "\n",
+    "p1=child()\n",
+    "p1.print_call()\n",
+    "# the print_call in child over rides the parent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d5a1362",
+   "metadata": {},
+   "source": [
+    "### Method print_call doesnt exists in child it calls the parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "d7cc1d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From the **** Parent ****\n",
+      "From the ^^^^ Child ^^^^ \n"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Parent\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the **** Parent ****\")\n",
+    "\n",
+    "class child(parent):\n",
+    "    def print_call_child(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "\n",
+    "\n",
+    "p1=child()\n",
+    "p1.print_call() # method not in child\n",
+    "p1.print_call_child() # method in child\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46043150",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From the ^^^^ Child ^^^^ \n",
+      "From the ^^^^ Child ^^^^ \n"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Parent\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the **** Parent ****\")\n",
+    "\n",
+    "class child(parent):\n",
+    "    def print_call_child(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "\n",
+    "p1=child()\n",
+    "p1.print_call() # method in child\n",
+    "p1.print_call_child() # method in child"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbb7fb78",
+   "metadata": {},
+   "source": [
+    "## Super"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9deffe70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From the ^^^^ Child ^^^^ \n",
+      " This attribute from Parent --> Parent\n",
+      "From the ^^^^ Child ^^^^ \n"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Parent\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the **** Parent ****\")\n",
+    "\n",
+    "class child(parent):\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from Parent --> {self.name}\")\n",
+    "        \n",
+    "    def print_call_child(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "p1=child()\n",
+    "p1.print_call() # method in child\n",
+    "p1.print_call_child() # method in child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed706cf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From the ^^^^ Child ^^^^ \n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'child' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[68], line 22\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m This attribute from Parent --> \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m p1\u001b[38;5;241m=\u001b[39mchild()\n\u001b[1;32m---> 22\u001b[0m \u001b[43mp1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprint_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# method in child\u001b[39;00m\n\u001b[0;32m     23\u001b[0m p1\u001b[38;5;241m.\u001b[39mprint_call_child()\n",
+      "Cell \u001b[1;32mIn[68], line 18\u001b[0m, in \u001b[0;36mchild.print_call\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprint_call\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFrom the ^^^^ Child ^^^^ \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 18\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m This attribute from Parent --> \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'child' object has no attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Parent\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the **** Parent ****\")\n",
+    "\n",
+    "class child(parent):\n",
+    "    def __init__(self):\n",
+    "        self.child_name=\"child_name\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from Parent --> {self.name}\")\n",
+    "        \n",
+    "    def print_call_child(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from child --> {self.child_name}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "p1=child()\n",
+    "p1.print_call() # method in child\n",
+    "p1.print_call_child() # method in child"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8133b2a",
+   "metadata": {},
+   "source": [
+    "#### Calling parent contructor with super().__init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a074983",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From the ^^^^ Child ^^^^ \n",
+      " This attribute from Parent --> Parent\n",
+      "From the ^^^^ Child ^^^^ \n",
+      " This attribute from child --> child_name\n"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Parent\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the **** Parent ****\")\n",
+    "\n",
+    "class child(parent):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()  # parent contructure\n",
+    "        self.child_name=\"child_name\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from Parent --> {self.name}\")\n",
+    "        \n",
+    "    def print_call_child(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from child --> {self.child_name}\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "p1=child()\n",
+    "p1.print_call() # method in child\n",
+    "p1.print_call_child() # method in child"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f28e6c4",
+   "metadata": {},
+   "source": [
+    "#### super can call methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "2704d22c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From the ^^^^ Child ^^^^ \n",
+      " This attribute from Parent --> Parent \n",
+      "\n",
+      "***************************************\n",
+      "Calling the parent method with super \n",
+      "\n",
+      "From the **** Parent ****\n",
+      "From the ^^^^ Child ^^^^ \n",
+      " This attribute from child --> child_name\n"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Parent\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the **** Parent ****\")\n",
+    "\n",
+    "class child(parent):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()  # parent contructure\n",
+    "        self.child_name=\"child_name\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from Parent --> {self.name} \\n\")\n",
+    "        print(\"***************************************\")\n",
+    "        \n",
+    "    def print_call_child(self):\n",
+    "        print(\"Calling the parent method with super \\n\")\n",
+    "        super().print_call()\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from child --> {self.child_name}\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "p1=child()\n",
+    "p1.print_call() # method in child\n",
+    "p1.print_call_child() # method in child"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3838a33b",
+   "metadata": {},
+   "source": [
+    "#### super cannot call the variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "bcf326bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From the ^^^^ Child ^^^^ \n",
+      " This attribute from Parent --> Parent \n",
+      "\n",
+      "***************************************\n",
+      "Calling the parent method with super \n",
+      "\n",
+      "From the **** Parent ****\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'super' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[79], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m p1\u001b[38;5;241m=\u001b[39mchild()\n\u001b[0;32m     29\u001b[0m p1\u001b[38;5;241m.\u001b[39mprint_call() \u001b[38;5;66;03m# method in child\u001b[39;00m\n\u001b[1;32m---> 30\u001b[0m \u001b[43mp1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprint_call_child\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[79], line 21\u001b[0m, in \u001b[0;36mchild.print_call_child\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCalling the parent method with super \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39mprint_call()\n\u001b[1;32m---> 21\u001b[0m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFrom the ^^^^ Child ^^^^ \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m This attribute from child --> \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchild_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'super' object has no attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "class parent:\n",
+    "    def __init__(self):\n",
+    "        self.name=\"Parent\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the **** Parent ****\")\n",
+    "\n",
+    "class child(parent):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()  # parent contructure\n",
+    "        self.child_name=\"child_name\"\n",
+    "\n",
+    "    def print_call(self):\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from Parent --> {self.name} \\n\")\n",
+    "        print(\"***************************************\")\n",
+    "        \n",
+    "    def print_call_child(self):\n",
+    "        print(\"Calling the parent method with super \\n\")\n",
+    "        super().print_call()\n",
+    "        super().name\n",
+    "        print(\"From the ^^^^ Child ^^^^ \")\n",
+    "        print(f\" This attribute from child --> {self.child_name}\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "p1=child()\n",
+    "p1.print_call() # method in child\n",
+    "p1.print_call_child() # method in child"
+   ]
   }
  ],
  "metadata": {
