types of inheritance

--- a/class_emp.ipynb
+++ b/class_emp.ipynb
@@ -426,6 +426,85 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b41a4d7b",
+   "metadata": {},
+   "source": [
+    "#### If no contructor is defined for the child class we need pass the attributes required by the parents class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "6180f235",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[84], line 15\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHey \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m from B\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39mcalling()\n\u001b[1;32m---> 15\u001b[0m p1\u001b[38;5;241m=\u001b[39m\u001b[43mB\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     16\u001b[0m p1\u001b[38;5;241m.\u001b[39mcalling()\n",
+      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print(f\"Hey {self.name} from A\")\n",
+    "\n",
+    "class B(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print(f\"Hey {self.name} from B\")\n",
+    "        super().calling()\n",
+    "\n",
+    "\n",
+    "p1=B()\n",
+    "p1.calling()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "0c542907",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey Raya from B\n",
+      "Hey Raya from A\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print(f\"Hey {self.name} from A\")\n",
+    "\n",
+    "class B(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print(f\"Hey {self.name} from B\")\n",
+    "        super().calling()\n",
+    "\n",
+    "\n",
+    "p1=B(\"Raya\")\n",
+    "p1.calling()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bbb7fb78",
    "metadata": {},
    "source": [
@@ -713,6 +792,256 @@
     "p1=child()\n",
     "p1.print_call() # method in child\n",
     "p1.print_call_child() # method in child"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9f91b52",
+   "metadata": {},
+   "source": [
+    "# Types of Inheritance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a825d0a8",
+   "metadata": {},
+   "source": [
+    "## Single level Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "4cb768e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey Raya from B\n",
+      "Hey Raya from A\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print(f\"Hey {self.name} from A\")\n",
+    "\n",
+    "class B(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print(f\"Hey {self.name} from B\")\n",
+    "        super().calling()\n",
+    "\n",
+    "\n",
+    "p1=B(\"Raya\")\n",
+    "p1.calling()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80cb7349",
+   "metadata": {},
+   "source": [
+    "## Multi-level Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "98f8b607",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------\n",
+      "Hey Raya from C\n",
+      "Calling B\n",
+      "--------------------\n",
+      "Hey Raya from B\n",
+      "Calling A\n",
+      "--------------------\n",
+      "Hey Raya from A\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\") * 20)\n",
+    "        print(f\"Hey {self.name} from A\")\n",
+    "\n",
+    "class B(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\") * 20)\n",
+    "        print(f\"Hey {self.name} from B\")\n",
+    "        print(\"Calling A\")\n",
+    "        super().calling()\n",
+    "        \n",
+    "\n",
+    "\n",
+    "class C(B):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\")*20)\n",
+    "        print(f\"Hey {self.name} from C\")\n",
+    "        print(\"Calling B\")\n",
+    "        super().calling()\n",
+    "        \n",
+    "\n",
+    "\n",
+    "p1=C(\"Raya\")\n",
+    "p1.calling()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b33a4e33",
+   "metadata": {},
+   "source": [
+    "## Hierarchical Iheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "f5364bb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------\n",
+      "Hey Raya from E\n",
+      "Calling A\n",
+      "--------------------\n",
+      "Hey Raya from A\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\") * 20)\n",
+    "        print(f\"Hey {self.name} from A\")\n",
+    "\n",
+    "class B(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\") * 20)\n",
+    "        print(f\"Hey {self.name} from B\")\n",
+    "        print(\"Calling A from B\")\n",
+    "        super().calling()\n",
+    "        \n",
+    "\n",
+    "class C(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\")*20)\n",
+    "        print(f\"Hey {self.name} from C\")\n",
+    "        print(\"Calling A from C\")\n",
+    "        super().calling()\n",
+    "\n",
+    "class E(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\")*20)\n",
+    "        print(f\"Hey {self.name} from E\")\n",
+    "        print(\"Calling A\")\n",
+    "        super().calling()\n",
+    "        \n",
+    "\n",
+    "\n",
+    "p1=E(\"Raya\")\n",
+    "p1.calling()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0735cf58",
+   "metadata": {},
+   "source": [
+    "## Hybrid Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "44a25a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------\n",
+      "Hey Raya from E\n",
+      "Calling B,C\n",
+      "--------------------\n",
+      "Hey Raya from B\n",
+      "Calling A from B\n",
+      "--------------------\n",
+      "Hey Raya from C\n",
+      "Calling A from C\n",
+      "--------------------\n",
+      "Hey Raya from A\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\") * 20)\n",
+    "        print(f\"Hey {self.name} from A\")\n",
+    "\n",
+    "class B(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\") * 20)\n",
+    "        print(f\"Hey {self.name} from B\")\n",
+    "        print(\"Calling A from B\")\n",
+    "        super().calling()\n",
+    "        \n",
+    "\n",
+    "class C(A):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\")*20)\n",
+    "        print(f\"Hey {self.name} from C\")\n",
+    "        print(\"Calling A from C\")\n",
+    "        super().calling()\n",
+    "\n",
+    "class E(B,C):\n",
+    "\n",
+    "    def calling(self):\n",
+    "        print((\"-\")*20)\n",
+    "        print(f\"Hey {self.name} from E\")\n",
+    "        print(\"Calling B,C\")\n",
+    "        super().calling()\n",
+    "        \n",
+    "\n",
+    "\n",
+    "p1=E(\"Raya\")\n",
+    "p1.calling()"
    ]
   }
  ],
